error/example/js/sync-error.js
// 同步错误

throw new Error(); // addEventListener
